# ClubManager

./: CMakeLists.txt  README.md
include/: Event.h  Server.h  Table.h  globals.h  utils.h
src/: Server.cpp  globals.cpp  main.cpp  utils.cpp
